fix: remove resource classes we dont support

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,8 +203,8 @@ workflows:
       - small
       - medium
       - medium+
-      - large
-      - xlarge
+      # - large
+      # - xlarge
 
   vm_jobs:
     jobs:
