--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -200,18 +200,18 @@ workflows:
   version: 2
   resource_class_jobs:
     jobs:
-      - small
+      # - small
       # - medium
       # - medium+
       # - large
       # - xlarge
 
-  # vm_jobs:
-  #   jobs:
-  #     - machine
-  #     - remote_docker
-  #     - docker_layer_caching
-  #     - machine_dlc
+  vm_jobs:
+    jobs:
+      # - machine
+      - remote_docker
+      # - docker_layer_caching
+      # - machine_dlc
 
   # feature_jobs:
   #   jobs:
